KAKEULGAE-11 master와 병합 및 테스트 환경 구축